# desktoper

./: CMakeLists.txt  README
.github/workflows/: build.yml
src/: desktoper.cpp  desktoper.h  main.cpp
